# gitingest

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  robots.txt  setup.py
.github/workflows/: ci.yml  publish.yml  unitest.yml
src/: cli.py  config.py  ingest.py  main.py  process_input.py  process_query.py  query_processor.py  server_utils.py  utils.py
src/gitingest/: __init__.py  cli.py  clone.py  config.py  exceptions.py  ignore_patterns.py  ingest.py  ingest_from_query.py  notebook_utils.py  parse_query.py  query_ingestion.py  query_parser.py  repository_clone.py  repository_ingest.py  utils.py
src/gitingest/tests/: conftest.py  test_clone.py  test_ingest.py  test_parse_query.py
src/routers/: __init__.py  download.py  dynamic.py  index.py
src/server/: main.py  query_processor.py  server_config.py  server_utils.py
src/server/routers/: __init__.py  download.py  dynamic.py  index.py
src/static/js/: snow.js  utils.js
src/templates/: api.html  api.jinja  api.jinja.html  base.html  base.jinja  base.jinja.html  github.html  github.jinja  github.jinja.html  index.html  index.jinja  index.jinja.html
src/templates/components/: footer.html  footer.jinja  git_form.jinja  github_form.jinja  github_form.jinja.html  navbar.html  navbar.jinja  navbar.jinja.html  (+3 more)
src/tests/: conftest.py  test_clone.py  test_ingest.py  test_parse_query.py  test_parse_url.py
src/utils/: __init__.py  clone.py  decorators.py  gitclone.py  log_convert.py  parse_query.py  parse_url.py
tests/: conftest.py  test_cli.py  test_clone.py  test_flow_integration.py  test_ingest.py  test_notebook_utils.py  test_parse_query.py  test_query_ingestion.py  test_query_parser.py  test_repository_clone.py
tests/query_parser/: test_git_host_agnostic.py  test_query_parser.py
(+1 files in other folders)
